<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="AdListing.ViewSelectedAd">

    <ImageView
        android:id="@+id/menu_bar_back_btn"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:onClick="goBack"
        android:src="@drawable/ic_baseline_arrow_back_24_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black01"
        app:layout_constraintTop_toBottomOf="@+id/menu_bar_back_btn" />

    <TextView
        android:id="@+id/tv_create_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_ad_box_title"
        android:textColor="@color/main_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menu_bar_back_btn"
        app:layout_constraintStart_toEndOf="@+id/menu_bar_back_btn"
        app:layout_constraintTop_toTopOf="@+id/menu_bar_back_btn"
        android:layout_marginLeft="16dp" />

    <ImageView
        android:id="@+id/img_selected_ad_image"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:srcCompat="@drawable/_22_1223498_png_clip_art_and_cartoon_fish_clipart" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black01"
        app:layout_constraintTop_toBottomOf="@+id/img_selected_ad_image" />

    <TextView
        android:id="@+id/tv_selected_ad_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_ad_box_title"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/tv_selected_ad_location_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/location"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_ad_title2"
        android:layout_marginLeft="32dp" />

    <TextView
        android:id="@+id/tv_selected_ad_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/tv_ad_box_location"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_selected_ad_location_string"
        app:layout_constraintStart_toEndOf="@+id/tv_selected_ad_location_string" />

    <TextView
        android:id="@+id/tv_selected_ad_contact_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/contact"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_selected_ad_location_string"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_ad_location_string" />

    <TextView
        android:id="@+id/tv_selected_ad_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_selected_ad_contact"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_selected_ad_contact_string"
        app:layout_constraintStart_toStartOf="@+id/tv_selected_ad_location" />

    <TextView
        android:id="@+id/tv_selected_ad_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rs"
        android:textColor="@color/main_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_selected_ad_contact_string"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_ad_contact_string" />

    <TextView
        android:id="@+id/tv_selected_ad_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/price"
        android:textColor="@color/main_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_selected_ad_rs"
        app:layout_constraintStart_toEndOf="@+id/tv_selected_ad_rs"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/tv_selected_ad_description_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_selected_ad_rs"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_ad_rs" />

    <TextView
        android:id="@+id/tv_selected_ad_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_selected_ad_description"
        app:layout_constraintStart_toStartOf="@+id/tv_selected_ad_description_string"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_ad_description_string" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_selected_ad_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/blue_border_button"
        android:drawableLeft="@drawable/ic_baseline_call_24"
        android:drawablePadding="20sp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:text="@string/call"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_ad_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/blue_border_button"
        android:drawableLeft="@drawable/ic_baseline_add_shopping_cart_24"
        android:drawablePadding="20sp"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:text="@string/select"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_selected_ad_call" />

</androidx.constraintlayout.widget.ConstraintLayout>