<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="AdListing.CreateNewAd">

    <ImageView
        android:id="@+id/menu_bar_back_btn"
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="goBack"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:layout_marginTop="8dp"
        android:background="@color/black01"
        app:layout_constraintTop_toBottomOf="@+id/menu_bar_back_btn" />

    <TextView
        android:id="@+id/tv_create_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/new_ad"
        android:textColor="@color/main_color"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/menu_bar_back_btn"
        app:layout_constraintStart_toEndOf="@+id/menu_bar_back_btn"
        app:layout_constraintTop_toTopOf="@+id/menu_bar_back_btn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/location"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/price_rs"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/contact"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/images"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/et_new_ad_price"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/et_new_ad_price"
        android:inputType="numberDecimal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <EditText
        android:id="@+id/et_new_ad_title"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/et_new_ad_title"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_new_ad_price" />

    <EditText
        android:id="@+id/et_new_ad_contact"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:hint="@string/et_new_ad_contact"
        android:inputType="number"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/et_new_ad_price"
        app:layout_constraintStart_toStartOf="@+id/et_new_ad_price" />

    <Spinner
        android:id="@+id/select_location_search"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:entries="@array/districts"

        android:background="@drawable/input_box"
        android:paddingStart="8dp"
        android:paddingEnd="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/et_new_ad_title"
        app:layout_constraintStart_toStartOf="@+id/et_new_ad_title"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="27dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="@+id/select_location_search"
        app:layout_constraintEnd_toEndOf="@+id/select_location_search"
        app:layout_constraintTop_toTopOf="@+id/select_location_search"
        app:srcCompat="@drawable/round_arrow_drop_down_20" />

    <ImageButton
        android:id="@+id/img_btn_image1"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_image2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/ic_baseline_add_circle_24" />

    <ImageButton
        android:id="@+id/img_btn_image2"
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_btn_image1"
        app:srcCompat="@drawable/ic_baseline_add_circle_24" />

    <ImageButton
        android:id="@+id/img_btn_image3"
        android:layout_width="100sp"
        android:layout_height="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/img_btn_image2"
        app:layout_constraintTop_toTopOf="@+id/img_btn_image2"
        app:srcCompat="@drawable/ic_baseline_add_circle_24" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/img_btn_image1" />

    <EditText
        android:id="@+id/et_new_ad_description"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/input_box"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/et_new_ad_description"
        android:inputType="textMultiLine"
        android:maxLength="220"
        android:paddingStart="15dp"
        android:paddingTop="8dp"
        android:paddingEnd="15dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/img_btn_image1"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <CheckBox
        android:id="@+id/chk_negotiable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/negotiable"
        app:layout_constraintStart_toStartOf="@+id/et_new_ad_description"
        app:layout_constraintTop_toBottomOf="@+id/et_new_ad_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/blue_border_button"
        android:drawableStart="@drawable/ic_baseline_check_24"
        android:drawablePadding="20sp"
        android:onClick="saveData"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/main_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_ad"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chk_negotiable" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/red_border_button"
        android:drawableStart="@drawable/ic_baseline_remove_circle_outline_24"
        android:drawablePadding="20sp"
        android:onClick="goBack"
        android:paddingStart="10dp"
        android:paddingEnd="15dp"
        android:text="@android:string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/cancel_red"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_submit_ad"
        app:layout_constraintTop_toBottomOf="@+id/chk_negotiable" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
